--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
+  <!-- reset.css 파일 적용 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- css 파일 로드 -->
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  hello World
+<!-- BEM 작명 규칙 -->
+<div class="body__container">
+
+</div>
 </body>
 </html>
