--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
 <!-- BEM 작명 규칙 -->
 <div class="body__container">
 
+  <!-- HEADER -->
+  <header class="section">
+    <div class="inner clearfix">
+
+      <div class="menu-group float--left">
+        <div class="logo">
+          <a href="javascript:void(0)">GitHub</a>
+        </div>
+        <ul class="main-menu">
+          <li><a href="javascript:void(0)">Personal</a></li>
+          <li><a href="javascript:void(0)">Open source</a></li>
+          <li><a href="javascript:void(0)">Business</a></li>
+          <li><a href="javascript:void(0)">Explore</a></li>
+        </ul>
+      </div>
+
+      <div class="sign-group float--right">
+        <div class="btn-group">
+          <a href="javascript:void(0)" class="btn sign-in">Sign in</a>
+          <a href="javascript:void(0)" class="btn btn--primary sign-up">Sign up</a>
+        </div>
+        <form id="search-form" method='POST' action="">
+          <input type="text" id="search" class="input--text" placeholder="Search GitHub">
+          <input type="submit" value="Submit">
+        </form>
+        <ul class="sub-menu">
+          <li><a href="javascript:void(0)">Pricing</a></li>
+          <li><a href="javascript:void(0)">Blog</a></li>
+          <li><a href="javascript:void(0)">Support</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </header>
+
 </div>
 </body>
 </html>
